# LoveDayApp

./: CMakeLists.txt  main.cpp
Controller/: AnswersController.cpp  AnswersController.h  QuestionsController.cpp  QuestionsController.h
Questions/: Questions.h
qml/: InputController.qml  LovePage.qml  base.qrc  main.qml
